# alfred-pj

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.sh  info.plist  main.py  pyproject.toml
.claude/skills/: release-changelog.md
.claude/skills/release-changelog/: SKILL.md
.github/workflows/: cd.yml  ci.yaml  release.yaml
src/alfred_pj/: __init__.py  cache.py  cli.py  editors.py  response.py  terminals.py  usage.py  utils.py
src/alfred_pj/commands/: __init__.py  clear_cache.py  clear_usage.py  debug.py  editor.py  list.py  open_finder.py  open_github.py  open_project.py  open_terminal.py  open_vscode.py  record_selection.py
src/alfred_pj/tests/: __init__.py  conftest.py  test_cache.py  test_editors.py  test_response.py  test_terminals.py  test_usage.py  test_utils.py
src/alfred_pj/tests/commands/: __init__.py  test_clear_cache.py  test_clear_usage.py  test_debug.py  test_editor.py  test_list.py  test_open_finder.py  test_open_github.py  test_open_project.py  test_open_terminal.py  test_open_vscode.py  test_record_selection.py
tests/test-projects/: README.md
tests/test-projects/cpp-cmake-project/: CMakeLists.txt
tests/test-projects/go-project/: go.mod
tests/test-projects/java-gradle-project/: build.gradle
tests/test-projects/javascript-project/: package.json
tests/test-projects/jupyter-project/: notebook.ipynb
tests/test-projects/php-project/: composer.json
tests/test-projects/python-project/: pyproject.toml
tests/test-projects/rust-project/: Cargo.toml
