[project]
name = "alfred-pj"
version = "1.0.1"
description = "Alfred workflow for quickly opening projects in their appropriate editor"
readme = "README.md"
authors = [
    { name = "Illia Grybkov", email = "illia@grybkov.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
alfred-pj = "alfred_pj.cli:cli"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
