[project]
name = "alfred-pj"
version = "1.1.2"
description = "Alfred workflow for quickly opening projects in their appropriate editor"
readme = "README.md"
authors = [
    { name = "Illia Grybkov", email = "illia@grybkov.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
build = ["uv~=0.10.0"]

[project.scripts]
alfred-pj = "alfred_pj.cli:cli"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "SIM112",  # Alfred env vars are lowercase by convention
]

[tool.ruff.lint.isort]
known-first-party = ["alfred_pj"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["src/**/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.semantic_release]
commit_parser = "conventional"
allow_zero_version = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version} [skip ci]"
assets = ["info.plist", "uv.lock"]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    uv run bin/release.py sync-plist-version
    uv run bin/release.py sync-defaults
    mkdir -p dist
    uv run bin/release.py package --output dist/alfred-pj.alfredworkflow
"""

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
    '''Merge pull request.*''',
    '''chore\(deps\):.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*.alfredworkflow"]
